--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ddr-app",
-  "homepage": "https://github.com/flashrob01/DDR-test.git",
+  "homepage": "https://flashrob01.github.io/DDR-test/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@auth0/auth0-react": "^1.8.0",
     "@craco/craco": "^6.4.1",
     "@emotion/react": "^11.5.0",
@@ -24,9 +25,11 @@
     "carbon-icons": "^7.0.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dompurify": "^2.3.4",
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
     "favicon": "^0.0.2",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "next": "^12.0.7",
@@ -50,6 +53,7 @@
     "react-table": "^7.7.0",
     "request": "^2.88.2",
     "requst": "^0.0.1-security",
+    "save-dev": "^0.0.1-security",
     "serve-favicon": "^2.5.0",
     "styled-components": "^5.3.3",
     "superagent": "^6.1.0",
